style corrections: delete borders in packages, align normal content to left

--- a/src/components/sections/Content/Content.scss
+++ b/src/components/sections/Content/Content.scss
@@ -23,10 +23,10 @@
 
   &__header {
     margin: 0 0 48px 0;
+    text-align: center;
     font-size: 48px;
     font-weight: 700;
     font-style: italic;
-    text-align: center;
     max-width: 600px;
     font-family: 'Nunito', sans-serif;
     padding: 0 16px;
@@ -50,13 +50,12 @@
   }
 
   &__paragraph {
-    text-align: center;
     margin: 0 0 80px 0;
     font-size: 16px;
     font-weight: 300;
     line-height: 36px;
     max-width: 600px;
-    padding: 0 16px;
+    padding: 0 16px 0 24px;
 
     @media (max-height: 800px) {
       margin: 0 0 32px 0;
