--- a/src/components/sections/Decorate/Decorate.scss
+++ b/src/components/sections/Decorate/Decorate.scss
@@ -21,7 +21,7 @@
 
   &__image {
     max-width: 560px;
-    max-height: 460px;
+    max-height: 500px;
     padding: 0 16px;
 
     @media (max-width: 1200px) {
