--- a/src/components/sections/Packages/Packages.scss
+++ b/src/components/sections/Packages/Packages.scss
@@ -60,8 +60,7 @@
     font-family: "Nunito", sans-serif;
     font-weight: 700;
     text-align: center;
-    padding: 24px 0 36px;
-    border-bottom: 2px solid white;
+    padding: 24px 0;
     margin: 0;
 
     @media (max-width: 768px) {
@@ -84,7 +83,6 @@
     font-size: 16px;
     line-height: 24px;
     padding: 16px;
-    border-bottom: 1px solid white;
     position: relative;
     margin-left: 16px;
 
@@ -100,18 +98,14 @@
 
     &::before {
       display: inline-block;
-      width: 20px;
-      height: 20px;
+      width: 8px;
+      height: 8px;
       position: absolute;
-      top: 16px;
-      left: -8px;
-      background: url("./../../../assets/star.svg");
+      background-color: black;
+      border-radius: 50%;
+      top: 22px;
+      left: 0;
       content: '';
-
-      @media (max-width: 768px) {
-        top: 14px;
-        left: -12px;
-      }
     }
 
     &--last {
